--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
+    "colorthief": "^2.4.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2"
   }
