--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "axios": "^1.4.0",
     "colorthief": "^2.4.0",
     "ejs": "^3.1.9",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
