--- a/package.json
+++ b/package.json
@@ -11,10 +11,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.4.0",
+    "axios": "^1.6.2",
+    "body-parser": "^1.20.2",
     "colorthief": "^2.4.0",
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "find-or-create": "^2.0.0",
+    "https": "^1.0.0",
+    "mongoose": "^8.0.1",
+    "mongoose-findorcreate": "^4.0.0",
+    "passport": "^0.6.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
